--- a/assets/css/custom_JC.css
+++ b/assets/css/custom_JC.css
@@ -4,3 +4,11 @@
   margin-right: auto;
   width: 50%;
 }
+
+.rotate90 {
+    -webkit-transform: rotate(90deg);
+    -moz-transform: rotate(90deg);
+    -o-transform: rotate(90deg);
+    -ms-transform: rotate(90deg);
+    transform: rotate(90deg);
+}
