--- a/assets/css/custom_JC.css
+++ b/assets/css/custom_JC.css
@@ -28,3 +28,9 @@ small { display: block }
 	margin-top: 6px;
 	margin-bottom: 6px;
 }
+
+/* Grid overrides */
+.col-sm-4 {
+	padding-left: 26px;
+	padding-right: 26px;
+}
