--- a/assets/css/custom_JC.css
+++ b/assets/css/custom_JC.css
@@ -51,9 +51,9 @@ small { display: block }
   min-height: 20px;
   padding: 19px;
   margin-bottom: 20px;
-  background-color: $well-bg;
-  border: 1px solid $well-border;
-  border-radius: $border-radius-base;
+  background-color: #f7e6e6;
+  border: 1px solid #850101;
+  border-radius: 5px;
   @include box-shadow(inset 0 1px 1px rgba(0,0,0,.05));
   blockquote {
     border-color: #ddd;
@@ -64,9 +64,9 @@ small { display: block }
 // Sizes
 .well-lg {
   padding: 24px;
-  border-radius: $border-radius-large;
+  border-radius: 5px;
 }
 .well-sm {
   padding: 9px;
-  border-radius: $border-radius-small;
+  border-radius: 2px;
 }
