--- a/assets/css/custom_JC.css
+++ b/assets/css/custom_JC.css
@@ -29,7 +29,7 @@
 
 .homeContainer {
   	display: inline-grid;
-  	grid-template: 400px 100px / 400px;
+  	grid-template: 80% 20% / 400px;
 }
 
 .homeBox {
