--- a/assets/css/custom_JC.css
+++ b/assets/css/custom_JC.css
@@ -29,7 +29,7 @@
 
 .homeContainer {
   	display: inline-grid;
-  	grid-template: 90% 10% / 400px;
+  	grid-template: 90% 10% / auto;
 }
 
 .homeBox {
