--- a/_includes/news.html
+++ b/_includes/news.html
@@ -2,7 +2,7 @@
 <h4>News</h4>
 
 {% for article in site.data.news limit:4 %}
-<p>{{ article.date }}<br>{{ article.headline | markdownify}}</p>
+<p style="margin-left: 6px; margin-right: 6px;">{{ article.date }}<br>{{ article.headline | markdownify}}</p>
 {% endfor %}
 
 <h4><a href="{{ site.url }}{{ site.baseurl }}/allnews.html">... see all News</a></h4>
