--- a/_includes/news.html
+++ b/_includes/news.html
@@ -4,11 +4,11 @@
 {% for article in site.data.news limit:4 %}
 <p style="margin-left: 6px; margin-right: 6px;">
  <b>{{ article.date }}</b>
- <br style="line-height: 120%;"/>
- <dl><dd>
- {{ article.headline | markdownify}}
- </dd></dl>
 </p>
+<p style="margin-left: 6px; margin-right: 6px;">
+ {{ article.headline | markdownify}}
+</p>
+
 {% endfor %}
 
 <h4><a href="{{ site.url }}{{ site.baseurl }}/allnews.html">... see all News</a></h4>
