--- a/_includes/news.html
+++ b/_includes/news.html
@@ -4,9 +4,9 @@
 {% for article in site.data.news limit:4 %}
 <p style="margin-left: 6px; margin-right: 6px;">
  <b>{{ article.date }}</b>
-</p>
-<p style="margin-left: 6px; margin-right: 6px;">
+<div>
  {{ article.headline | markdownify}}
+</div>
 </p>
 
 {% endfor %}
