--- a/_includes/news.html
+++ b/_includes/news.html
@@ -4,7 +4,7 @@
 {% for article in site.data.news limit:4 %}
 <p style="margin-left: 6px; margin-right: 6px;">
  <b>{{ article.date }}</b>
-<div>
+<div style="margin-left: 6px; margin-right: 6px;">
  {{ article.headline | markdownify}}
 </div>
 </p>
